
	* bin/cygport.in (apply_patch): Fix patchlevel redefinition.

	* CYGWIN-PATCHES/README
	* lib/Makefile.am
	* lib/apache.cygclass:
	New cygclass for building Apache mod_* modules.

	* lib/qt3.cygclass: Add --enable-auto-import to LDFLAGS.

	* lib/kde3.cygclass (kde3_compile):
	Enable arts by default. Run make apidox when applicable.
	* (kde3_install): Handle alternate split-package naming.

	* data/mirrors (mirror_berlios): Added.

	* lib/ruby.cygclass (ruby_compile, ruby_install):
	Support ruby extensions which use solely rake.

	* bin/cygport.in (gpg_verify): Fix .sig extensions.
	Patch by Eric Blake: http://cygwin.com/ml/cygwin/2007-01/msg00593.html

	* lib/gnome.org.cygclass: Add GNOME SVN_URI.
	* lib/svn.cygclass: Append SVN_BRANCH (defaults to 'trunk') to SVN_URI.

	* CYGWIN-PATCHES/README
	* configure.ac:
	Post-release version bump.

*** 0.2.8 ***

	* CYGWIN-PATCHES/README
	* lib/Makefile.am
	* lib/wxwidgets.cygclass:
	New cygclass for building wxWidgets-dependent packages.

	* autogen.sh: Fix ac-2.60 to 2.61 transition.
	* bin/cygport.in (cygautoreconf): Use datarootdir with ac-2.61 also.
	Prepare for ac-2.62.
	Reported by Charles Wilson:
	http://cygwin.com/ml/cygwin/2007-01/msg00109.html

	* bin/cygport.in (apply_patch): Correct variable names.
	Patch by Charles Wilson:
	http://cygwin.com/ml/cygwin/2007-01/msg00118.html

	* Add .cvsignore files.

	* bin/cygport.in (apply_patch):
	Fix patchlevel for .cygwin.patch, making code more readable as well.
	Reported by Christian Franke:
	http://cygwin.com/ml/cygwin/2007-01/msg00036.html

	* lib/gtk2-perl.cygclass: Fix DEPS_PATH.  Fix Gnome2-Rsvg dependencies.

	* CYGWIN-PATCHES/README
	* configure.ac:
	Post-release version bump.

*** 0.2.7 ***

	* CYGWIN-PATCHES/README
	* configure.ac
	* doc/Makefile.am: Use groff instead of man2html.

	* bin/cygport.in (__list_deps): Ignore KERNEL32.dll. Show mono dep.

	* data/mirrors (mirror_trolltech): Added.

	* bin/cygport.in: Support autoconf-2.61.
