@@ -1,4 +1,6 @@
 
+	* bin/cygport.in: Added postinstall command for developers.
+
 	* bin/cygport.in (apply_patch): Fix patchlevel redefinition.
 
 	* CYGWIN-PATCHES/README
